# vbpr

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: main.py
src/datasets/amazon-fashion/: item2id.pkl  items.txt  test.txt  train.txt  user2id.pkl
src/datasets/sample/: items.txt  test.txt  train.txt  user2id.pkl
src/models/: base.py  vbpr.py  vbpr_torch.py
src/outputs/amazon-fashion/log/: vbpr_20211014-163622.log.sample  vbpr_20211109-093127.log.sample
src/outputs/amazon-fashion/pretrain/: vbpr_epoch15_20211014-163622.pth  vbpr_epoch15_20211109-093127.pth
src/outputs/sample/log/: vbpr_20211014-070731.log.sample
src/utils/: helpers.py  metrics.py  parser.py  samplers.py  types.py
src/utils/loaders/: base.py  vbpr.py  vbpr2.py
